Update unit tests for consistency